#-------------------------------------------------------------------
# Joonatan Kuosa
# 2011-02
#
# This file is part of the CMake build system for Hydra
#
# The contents of this file are placed in the public domain. Feel
# free to make use of it in any way you like.
#
#-------------------------------------------------------------------

project("tools" CXX)

cmake_minimum_required(VERSION 2.6)

add_subdirectory( ${CMAKE_CURRENT_SOURCE_DIR}/blender2ogre )

